# pyn2

./: CONTRIBUTING.md  README.md  gen_diag.html  pyproject.toml
.github/workflows/: python-publish.yml
pyn2/: chart.py
tests/: element_test.py
tests/standalone/: n2_generate.py
